--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Reglas de inferencia, confusión y colisión con lenguaje natural.</h1>
     <p>
+        <textarea>
         
 
 El lenguaje “natural” hay veces es un poco enredoso y cae en contradicciones o ambigüedades y por eso en  matemáticas – lógica  se desarrolla un lenguaje propio con  símbolos, relaciones, y reglas.
@@ -68,7 +69,8 @@ Evaluamos y también vemos que es una implicancia. Esto parece algo raro ya que 
 En  suma, para evaluar que cierta regla es un razonamiento correcto debemos someterlo a un condicional, el cual debe ser una tautologia. Al ser una tautologia, la conclusion puede ser verdadera o falsa. En el caso que la conclusión sea falsa (razonamiento incorrecto) entonces hemos encontrado que las premisas, alguna de ellas es verdadera y su conclusión es falsa. En el caso de ser verdadera toda la IMPLICANCIA el valor de verdad de las proposiciones pueden ser muchos. 
 Entonces nos preguntamos como podríamos construir una regla de inferencia. Dada unas premisas verdaderas y si al poner como conclusión cierta proposicion tendriamos que evaluar todos los casos posibles. Si existe una premisa falsa, automáticamente la condicional es una tautologia, sin importar la conclusión. O sea que no sabremos si la conclusión es falsa o verdadera. En este caso el razonamiento puede ser correcto, sin embargo con alguna  premisa falsa no se puede conocer con certeza el valor de verdad de la conclusión. Podemos restringirlos solo a premisas verdaderas y concluir algo con el mismo valor de las premisas con el cuidado de que sea un razonamiento correcto (tautologia de la condicional).
 Para evaluar rapidamente un razonamiento podemos irnos al único caso de falsedad de la implicancia que es cuando el antecedente es verdadero y el consecuente es falso y si es posible encontrar dicho caso(sin contradicciones) , entonces concluimos que no es una tautologia y no es un razonamiento correcto. 
-    </p>
+   
+          </textarea>  </p>
     <p>Encuentra el Leopardo en 5 segundos</p>
     <img style ="width: 20%;" src="imagen.jpeg">
 </body>
