--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <pre>
         
 
-El lenguaje “natural” hay veces es un poco enredoso y cae en contradicciones o ambigüedades y por eso en  matemáticas – lógica 
-se desarrolla un lenguaje propio con  símbolos, relaciones, y reglas.
+El lenguaje “natural” hay veces es un poco enredoso y cae en contradicciones o ambigüedades y por eso en  matemáticas – 
+lógica se desarrolla un lenguaje propio con  símbolos, relaciones, y reglas.
 Cuando revisamos la base de la lógica nos encontramos con las famosas reglas de inferencia lógica, las cuales son 
 como una clase de formulas con detonaciones de proposiciones y sus relaciones. Hay veces, para entender esto es 
 mejor desligarse por completo del sentido del lenguaje natural, aunque es bien sabido que el aprendizaje se genera 
