--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
         <pre>
         
 
-El lenguaje “natural” hay veces es un poco enredoso y cae en contradicciones o ambigüedades y por eso en  matemáticas – 
-lógica se desarrolla un lenguaje propio con  símbolos, relaciones, y reglas.
+El lenguaje “natural” hay veces es un poco enredoso y cae en contradicciones o ambigüedades, y por eso en  lògica 
+matematica se desarrolla un lenguaje propio con  símbolos, relaciones, y sus reglas.
 Cuando revisamos la base de la lógica nos encontramos con las famosas reglas de inferencia lógica, las cuales son 
-como una clase de formulas con detonaciones de proposiciones y sus relaciones. Hay veces, para entender esto es 
+como una clase de formulas con de proposiciones y sus relaciones. Hay veces, para entender esto es 
 mejor desligarse por completo del sentido del lenguaje natural, aunque es bien sabido que el aprendizaje se genera 
-por relaciones conocimiento anterior con conocimiento nuevo. Sin embargo genera confusiones y colisiones.
+por relaciones conocimiento anterior con conocimiento nuevo. Sin embargo, en este caso esto genera confusiones y 
+colisiones.
 
 
 Para entender la inferencia lógica, primero definiremos el “razonamiento correcto”, el razonamiento correcto los
@@ -95,9 +96,9 @@ tautologia y se niega que hace frio, la única alternativa para que sea una taut
 
 En  suma, para evaluar que cierta regla es un razonamiento correcto debemos someterlo a un condicional, el cual 
 debe ser una tautologia. Al ser una tautologia, la conclusion puede ser verdadera o falsa. En el caso que la 
-conclusión sea falsa (razonamiento incorrecto) entonces hemos encontrado que las premisas, alguna de ellas es 
-verdadera y su conclusión es falsa. En el caso de ser verdadera toda la IMPLICANCIA el valor de verdad de las 
-proposiciones pueden ser muchos. 
+conclusión sea falsa (razonamiento incorrecto) entonces hemos encontrado que las premisas, siendo todas verdaderas
+ su conclusión es falsa. En el caso de ser verdadera toda la IMPLICANCIA el valor de verdad de las 
+proposiciones pueden ser muchos casos (solo tres casos). 
 Entonces nos preguntamos como podríamos construir una regla de inferencia. Dada unas premisas verdaderas y si al 
 poner como conclusión cierta proposicion tendriamos que evaluar todos los casos posibles. Si existe una premisa 
 falsa, automáticamente la condicional es una tautologia, sin importar la conclusión. O sea que no sabremos si la 
